salesforce_ant_45.0/sample/codepkg/objects/Wallet_transaction_for_Store__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_Collected__c</fullName>
        <label>Cash Collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City_Name__c</fullName>
        <label>City Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Balance__c</fullName>
        <label>Closing Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_Type__c</fullName>
        <label>Currency Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opening_Balance__c</fullName>
        <label>Opening Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Id__c</fullName>
        <label>Order Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Wallet_transaction_for_Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Wallet transaction for Store</label>
    <nameField>
        <label>Transaction Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wallet transaction for Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>